Fix Ninja Forms label wrapping

--- a/src/assets/styles/module/ninja-forms/_ninja-forms.scss
+++ b/src/assets/styles/module/ninja-forms/_ninja-forms.scss
@@ -51,7 +51,7 @@
 
     &.label-right .field-wrap .nf-field-label,
     &.label-left .field-wrap .nf-field-label {
-        flex: none;
+        flex: 1 1 0%;
     }
 
     &.label-above .field-wrap .nf-field-element,
